# quaternion

./: CMakeLists.txt  README.md  complex.cpp  complex.h  imagine.cpp  imagine.h  main.cpp  quaternion.cpp  quaternion.h
.github/workflows/: codeql-analysis.yml
